--- a/cepniyasin-github-io/src/app/app.component.html
+++ b/cepniyasin-github-io/src/app/app.component.html
@@ -1,13 +1,7 @@
-<div class="contents">
-  <div class="container">
-    <h1>Coming Soon</h1>
-    <p>Get ready for something amazing...</p>
-    <div class="message">P.S. Don’t hold your breath. This may take a little while...</div>
+<div class="app-component">
+  <app-navbar class="navbar"/>
+  <div class="app-component-content">
+    <router-outlet/>
   </div>
-
-  <div class="footer">
-    &copy; 2024 Yasin Cepnioglu. All rights reserved.
-  </div>
+  <app-footer class="footer"/>
 </div>
-
-<router-outlet />
