--- a/cepniyasin-github-io/src/app/app.component.scss
+++ b/cepniyasin-github-io/src/app/app.component.scss
@@ -1,32 +1,22 @@
-.contents {
-  display: flex;
-  justify-content: center;
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
-.container {
-  text-align: center;
-}
+//.app-component {
+//  height: 100%;
+//}
 
-h1 {
-  font-size: 4rem;
-  margin-bottom: 20px;
-}
-
-p {
-  font-size: 1.5rem;
-  margin-bottom: 20px;
+.app-component-content {
+  padding-top: 3.5em;
+  padding-bottom: 3.5em;
 }
 
 .footer {
-  margin-top: 40px;
-  font-size: 1rem;
-  color: #999;
-  position: absolute;
-  bottom: 1em;
-}
-
-.message {
-  margin-top: 30px;
-  font-size: 1.2rem;
-  color: #888;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 1000;
 }
