--- a/cepniyasin-github-io/src/app/footer/footer.component.html
+++ b/cepniyasin-github-io/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="mat-toolbar">
+<mat-toolbar class="yc-mat-toolbar">
   <button mat-button [matMenuTriggerFor]="projects">projects</button>
   <mat-menu #projects="matMenu">
     <button mat-menu-item routerLink="/project">GIS</button>
@@ -6,4 +6,3 @@
     <button mat-menu-item routerLink="/project">Work</button>
   </mat-menu>
 </mat-toolbar>
-  
