--- a/cepniyasin-github-io/src/app/navbar/navbar.component.html
+++ b/cepniyasin-github-io/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="mat-toolbar">
+<mat-toolbar color="primary" class="yc-mat-toolbar">
   <button mat-button routerLink="/home" aria-label="A button with a home icon">
     <div class="logo-text">yace</div>
   </button>
