--- a/cepniyasin-github-io/src/app/navbar/navbar.component.scss
+++ b/cepniyasin-github-io/src/app/navbar/navbar.component.scss
@@ -9,6 +9,9 @@
   padding-bottom: 10%;
 }
 
-.mat-toolbar {
+.yc-mat-toolbar {
+  display: flex;
+  justify-content: space-between;
   height: 3.5em;
+  background: var(--mat-sys-on-tertiary-fixed);
 }
