take away unused stuff for now and fix about page temporarily

--- a/cepniyasin-github-io/src/app/footer/footer.component.html
+++ b/cepniyasin-github-io/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar class="yc-mat-toolbar">
-  <button mat-button [matMenuTriggerFor]="projects">projects</button>
-  <mat-menu #projects="matMenu">
-    <button mat-menu-item routerLink="/project">GIS</button>
-    <button mat-menu-item routerLink="/project">Code</button>
-    <button mat-menu-item routerLink="/project">Work</button>
-  </mat-menu>
+<!--  <button mat-button [matMenuTriggerFor]="projects">projects</button>-->
+<!--  <mat-menu #projects="matMenu">-->
+<!--    <button mat-menu-item routerLink="/project">GIS</button>-->
+<!--    <button mat-menu-item routerLink="/project">Code</button>-->
+<!--    <button mat-menu-item routerLink="/project">Work</button>-->
+<!--  </mat-menu>-->
 </mat-toolbar>
