--- a/cepniyasin-github-io/src/app/navbar/navbar.component.html
+++ b/cepniyasin-github-io/src/app/navbar/navbar.component.html
@@ -4,10 +4,10 @@
   </button>
   <div>
     <button mat-button routerLink="/about">About</button>
-    <button mat-button routerLink="/">
-      login
-      <!-- TODO: Figure out how to save angular mateirals stuff. ex. icons -->
-      <mat-icon>login</mat-icon>
-    </button>
+<!--    <button mat-button routerLink="/">-->
+<!--      login-->
+<!--      &lt;!&ndash; TODO: Figure out how to save angular mateirals stuff. ex. icons &ndash;&gt;-->
+<!--      <mat-icon>login</mat-icon>-->
+<!--    </button>-->
   </div>
 </mat-toolbar>
