--- a/cepniyasin-github-io/src/styles.scss
+++ b/cepniyasin-github-io/src/styles.scss
@@ -9,6 +9,7 @@ html, body {
 
 body {
   margin: 0;
+  background: var(--mat-sys-background);
 }
 
 html {
@@ -20,4 +21,8 @@ html {
     typography: (Montserrat, Roboto, "Helvetica Neue", sans-serif),
     density: -2
   ));
+}
+
+p {
+  font-family: var(--mat-sys-body-medium-font), serif;
 }
